tests/parse_print/autogen/446~final/stderr.expected
Error:
    tests/parse_print/autogen/446~final/spec.essence:5:45:
  |
5 |     (partition() : `partition from bool`) = partition({true}) - partition({false})
  |                                             ^^^^^^^^^^^^^^^^^
Type error:
	Expected: number, set, mset, relation or function
	Got: partition from bool

tests/parse_print/autogen/446~final/spec.essence:5:65:
  |
5 |     (partition() : `partition from bool`) = partition({true}) - partition({false})
  |                                                                 ^^^^^^^^^^^^^^^^^^
Type error:
	Expected: number, set, mset, relation or function
	Got: partition from bool
